[project]
name = "django-revision"
dynamic = ["version"]
description = "Track the git revision with every model instance saved"
readme = "README.md"
dependencies = ['GitPython']
requires-python = '>=3.12'
keywords = ['Django', 'git', 'revision', 'clinicedc', 'edc']
authors = [{name="Erik van Widenfelt", email="ew2789@gmail.com"}]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/erikvw/django-revision"
Documentation = "https://github.com/erikvw/django-revision/blob/README.rst"
Repository = "https://github.com/erikvw/django-revision.git"
Changelog = "https://github.com/erikvw/django-revision/blob/main/CHANGES"

[project.optional-dependencies]
test = ["coverage", "edc_test_settings"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]

[tool.setuptools_scm]
version_file="_version.py"

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''^(.*\/)*\b(migrations)\b($|\/.*$)'''

[tool.isort]
profile = "black"
py_version = "312"
skip = [".tox", ".eggs", "migrations", "_version.py"]

[tool.coverage.run]
parallel = false
branch = true
source = ["django_revision"]

[tool.coverage.paths]
source = ["django_revision"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{312}-dj{50},
    py{313}-dj{50,dev},
    lint

isolated_build = true

[gh-actions]
python =
    3.12: py312
    3.13: py313, lint

[gh-actions:env]
DJANGO =
    5.2: dj52
    dev: djdev, lint

[testenv]
deps =
    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/tox.txt
    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/test_utils.txt
    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt
    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/third_party_dev.txt
    dj52: Django>=5.2,<5.3
    djdev: https://github.com/django/django/tarball/main

commands =
    pip install -U pip coverage[toml]
    pip --version
    pip freeze
    coverage run -a runtests.py
    coverage report

[testenv:lint]
deps = -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/lint.txt
commands =
    isort --profile=black --check --diff .
    black --check --diff .
    flake8 .
"""
