[metadata]
name = django-revision
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = http://github.com/erikvw/django-revision
license = GPL license, see LICENSE
description = Track the git revision with every model instance saved
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django Edc fields git
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    GitPython

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    django_revision.tests*

[flake8]
ignore = E226,W503,E203,W605
max-line-length = 95
max-complexity = 10
exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401
